# fluffy_chess

./: CMakeLists.txt  compile.sh  compile_flags.txt
include/: board.hpp  board_initializer.hpp  board_printer.hpp  types.hpp
src/: board.cpp  board.ipp  board_initializer.cpp  board_initializer.ipp  board_printer.cpp  main.cpp
